--- a/week1/ex1/index.html
+++ b/week1/ex1/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Javascript</title>
+    <title>Hello world!</title>
     <link href="main.css" rel="stylesheet">
+    <link href="normalize.css" rel="stylesheet">
 </head>
 
 <body>
-    Week 1
     <script src="script.js"></script>
 </body>
 
