correctly added p5 script link

--- a/week1/A-1/index.html
+++ b/week1/A-1/index.html
@@ -6,8 +6,7 @@
     <title>Snow Creature Demo</title>
 </head>
 <body>
-    
-    <script src="../../shared_scripts/p5.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/p5@1.9.0/lib/p5.js"></script>
     <script src="snowman.js"></script>
 </body>
 </html>
