--- a/week2/ex1/index.html
+++ b/week2/ex1/index.html
@@ -6,6 +6,7 @@
     <title>Exercise: Movie Array</title>
 </head>
 <body>
+    <h1>See the console for the exercise information.</h1>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.9.0/lib/p5.js"></script>
     <script src="script.js"></script>
 </body>
