--- a/week2/A-2/index.html
+++ b/week2/A-2/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exercise: Objects in Arrays</title>
+    <title>Asrray of Questions</title>
+    <author>Kyrin Van Heise</author>
 </head>
 <body>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.9.0/lib/p5.js"></script>
