--- a/week2/A-2/index.html
+++ b/week2/A-2/index.html
@@ -9,5 +9,7 @@
 <body>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.9.0/lib/p5.js"></script>
     <script src="script.js"></script>
+
+    <h1>See the console.</h1>
 </body>
 </html>
