--- a/week3/A-3/index.html
+++ b/week3/A-3/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Asrray of Questions</title>
+    <title>Visual Quiz Game or Radial Art</title>
     <author>Kyrin Van Heise</author>
 </head>
 <body>
