--- a/week3/ex1/index.html
+++ b/week3/ex1/index.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exercise: Movie Array</title>
+    <title>Exercise: Create a Function Tile</title>
 </head>
 <body>
-    <h1>See the console for the exercise information.</h1>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.9.0/lib/p5.js"></script>
     <script src="script.js"></script>
 </body>
