--- a/week4/ex1/index.html
+++ b/week4/ex1/index.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exercise: Create a Function Tile</title>
+    <title>Exercise: DOM Manipulation and Events</title>
 </head>
 <body>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.9.0/lib/p5.js"></script>
     <script src="script.js"></script>
+
+    <div id="myEmptyDiv"></div>
 </body>
 </html>
