--- a/week5/ex2/index.html
+++ b/week5/ex2/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exercise: Events in P5.js</title>
+    <title>Exercise: Classes and the Bubble</title>
 </head>
 <body>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.9.0/lib/p5.js"></script>
