--- a/week11/11-A/sketch1/index.html
+++ b/week11/11-A/sketch1/index.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>p5 Sketches v1</title>
+    <title>Transform: Panorama</title>
+    <link href="sketch.css" rel="stylesheet">
 </head>
 
 <body>
-    <h1>Page Title Here</h1>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.9.0/lib/p5.js"></script>
     <script src="main.js"></script>
+    <h1>Transform: Panorama</h1>
+    <p>Use the arrow keys on your keyboard to explore the image!</p>
 </body>
 </html>
