--- a/week11/11-A/sketch1/index.html
+++ b/week11/11-A/sketch1/index.html
@@ -12,5 +12,8 @@
     <script src="main.js"></script>
     <h1>Transform: Panorama</h1>
     <p>Use the arrow keys on your keyboard to explore the image!</p>
+    <footer>
+        <p>Kyrin Van Heise | Spring 2024</p>
+    </footer>
 </body>
 </html>
