--- a/week11/11-A/sketch1/index.html
+++ b/week11/11-A/sketch1/index.html
@@ -8,10 +8,16 @@
 </head>
 
 <body>
-    <script src="https://cdn.jsdelivr.net/npm/p5@1.9.0/lib/p5.js"></script>
-    <script src="main.js"></script>
-    <h1>Transform: Panorama</h1>
-    <p>Use the arrow keys on your keyboard to explore the image!</p>
+    <header>
+        <h1>Transform: Panorama</h1>
+        <p>Use the arrow keys on your keyboard to explore the image!</p>
+    </header>
+
+    <div class="script-section">
+        <script src="https://cdn.jsdelivr.net/npm/p5@1.9.0/lib/p5.js"></script>
+        <script src="main.js"></script>
+    </div>
+
     <footer>
         <p>Kyrin Van Heise | Spring 2024</p>
     </footer>
