created a spinning box in the void!

--- a/week11/11-A/sketch2/index.html
+++ b/week11/11-A/sketch2/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Transform: Panorama</title>
+    <title>Transform: Spinning Box</title>
     <link href="sketch.css" rel="stylesheet">
 </head>
 
 <body>
     <header>
-        <h1>Transform: Panorama</h1>
-        <p>Use the arrow keys on your keyboard to explore the image!</p>
+        <h1>Transform: Spinning Box</h1>
+        <p>Rotate the box with your mouse or let it spin on its own.</p>
     </header>
 
     <div class="script-section">
