--- a/week11/11-A/sketch3/index.html
+++ b/week11/11-A/sketch3/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Transform: Panorama</title>
+    <title>Directional Lighting</title>
     <link href="sketch.css" rel="stylesheet">
 </head>
 
 <body>
     <header>
-        <h1>Transform: Panorama</h1>
-        <p>Use the arrow keys on your keyboard to explore the image!</p>
+        <h1>Directional Lighting</h1>
+        <p>Change the lighting angle by moving your mouse cursor!</p>
     </header>
 
     <div class="script-section">
