--- a/week12/12-A/index.html
+++ b/week12/12-A/index.html
@@ -6,7 +6,7 @@
     <title>Digital Instrument</title>
     <link href="sketch.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/p5@1.9.0/lib/p5.js"></script>
-    <script src="path/to/p5.sound.js"></script>
+    <script language="javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.8/p5.sound.js"></script>
 </head>
 
 <body>
