--- a/week12/12-A/index.html
+++ b/week12/12-A/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Digital Instrument</title>
     <link href="sketch.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/p5@1.9.0/lib/p5.js"></script>
-    <script language="javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.8/p5.sound.js"></script>
+    <script language="javascript" src="https://cdn.jsdelivr.net/npm/p5@1.9.3/lib/p5.js"></script>
+    <script language="javascript" src="https://cdn.jsdelivr.net/npm/p5@1.9.3/lib/addons/p5.sound.js"></script>
 </head>
 
 <body>
