--- a/week12/12-A/index.html
+++ b/week12/12-A/index.html
@@ -5,9 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Digital Instrument</title>
     <link href="sketch.css" rel="stylesheet">
-    <script language="javascript" src="https://cdn.jsdelivr.net/npm/p5@1.9.3/lib/p5.js"></script>
-    <script language="javascript" src="https://cdn.jsdelivr.net/npm/p5@1.9.3/lib/addons/p5.sound.js"></script>
-    <script src="main.js"></script>
 </head>
 
 <body>
@@ -16,6 +13,10 @@
         <p>Instructions!</p>
     </header>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.3/p5.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.3/addons/p5.sound.js"></script>
+    <script src="main.js"></script>
+    
     <footer>
         <p>Kyrin Van Heise | Spring 2024</p>
     </footer>
