added some CSS and cleaned up spacing

--- a/week12/ex2/index.html
+++ b/week12/ex2/index.html
@@ -11,8 +11,8 @@
 
 <body>
     <header>
-        <h1>Audio Sample</h1>
-        <p>Instructions!</p>
+        <h1>Audio Sample & Amplitude Analysis</h1>
+        <p>Click play below to listen!</p>
     </header>
 
     <script src="main.js"></script>
