--- a/week12/ex2/index.html
+++ b/week12/ex2/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <h1>Audio Sample & Amplitude Analysis</h1>
+        <h1>Amplitude Analysis</h1>
         <p>Click play below to listen!</p>
     </header>
 
