finally got the code working and updated css!!

--- a/week12/12-A/index.html
+++ b/week12/12-A/index.html
@@ -5,20 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Digital Instrument</title>
     <link href="sketch.css" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Satisfy&display=swap" rel="stylesheet">
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.3/p5.js" integrity="sha512-hh+SgsBq/fi/sP+im6v2IxfQnEnqmT+K6HTb6GjXdyWo5MIRmVsGdXkM+L5xspw1+bXvdva/vvPs0wezzsY7Zg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.3/addons/p5.sound.js" integrity="sha512-TU9AWtV5uUZPX8dbBAH8NQF1tSdigPRRT82vllAQ1Ke28puiqLA6ZVKxtUGlgrH6yWFnkKy+sE6luNEGH9ar0A==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
 
 <body>
     <header>
-        <h1>Digital Instrument</h1>
-        <p>Instructions!</p>
+        <h1 class="satisfy-regular">Digital Instrument</h1>
+        <p class="roboto-regular">Use the keys below to play a tune!</p>
     </header>
 
     <script src="main.js"></script>
     
     <footer>
-        <p>Kyrin Van Heise | Spring 2024</p>
+        <p class="roboto-regular">Kyrin Van Heise | Spring 2024</p>
     </footer>
 </body>
 </html>
