--- a/week13/ex2/index.html
+++ b/week13/ex2/index.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>13.2 Oscillation</title>
     <link href="sketch.css" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.3/p5.js" integrity="sha512-hh+SgsBq/fi/sP+im6v2IxfQnEnqmT+K6HTb6GjXdyWo5MIRmVsGdXkM+L5xspw1+bXvdva/vvPs0wezzsY7Zg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.3/addons/p5.sound.js" integrity="sha512-TU9AWtV5uUZPX8dbBAH8NQF1tSdigPRRT82vllAQ1Ke28puiqLA6ZVKxtUGlgrH6yWFnkKy+sE6luNEGH9ar0A==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
 
 <body>
     <!-- <header>
-        <h1>Amplitude Analysis</h1>
-        <p>Click play below to listen!</p>
+        <h1>Oscillation</h1>
     </header> -->
 
     <script src="main.js"></script>
